--- a/css/custom/main.css
+++ b/css/custom/main.css
@@ -83,7 +83,12 @@ header.header .header-nav li {
 }
 
 header.header .header-nav li a {
-    color: #1c2230
+    /* color: #1c2230; */
+    color: white;
+}
+
+header.header {
+    background: #1c2230;
 }
 
 header.header .ant-dropdown-link {
